syntax = "proto3";

package user;

service UserService {
  rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc DelUser(DelUserRequest) returns (DelUserResponse) {}
  rpc ModifyUserInfo(ModifyUserInfoRequest) returns (ModifyUserInfoResponse) {}
  rpc GetUserIdByPhoneNumber(GetUserIdByPhoneNumberRequest) returns (GetUserIdByPhoneNumberResponse) {}
  rpc GetUsersByName(GetUsersByNameRequest) returns (GetUsersByNameResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc DecryptWxUserInfo(DecryptWxUserInfoRequest) returns (DecryptWxUserInfoResponse) {}
}

message WxUserInfo {
  string rawData = 1;
  string signature = 2;
  string encryptedData = 3;
  string iv = 4;
  string code = 5;
}

message DecryptWxUserInfoRequest {
  string userID = 1;
  WxUserInfo wxUserInfo = 2;
}

message DecryptWxUserInfoResponse {
  uint32 code = 1;
  string codeMsg = 2;
  string wxUserInfoData = 3;
}

message LoginRequest {
  string name = 1;
  string identityNo = 2;
  string phoneNumber = 3;
  string email = 4;
  WxUserInfo wxUserInfo = 5;
}

message LoginResponse {
  uint32 code = 1;
  string codeMsg = 2;
  string userID = 3;
}

message UserInfo {
  string name = 1;
  string identityNo = 2;
  uint32 age = 3;
  uint32 gender = 4;     // 0:male 1:female
  string phoneNumber = 5;
  string email = 6;
}

message AddUserRequest {
  string name = 1;
  string identityNo = 2;
  uint32 age = 3;
  uint32 gender = 4;     // 0:male 1:female
  string phoneNumber = 5;
  string email = 6;
}

message AddUserResponse {
  uint32 code = 1;
  string codeMsg = 2;
  string userID = 3;
}

message GetUserRequest {
  string userID = 1;
}

message GetUserResponse {
  uint32 code = 1;
  string codeMsg = 2;
  UserInfo userInfo = 3;
}

message DelUserRequest {
  string userID = 1;
}

message DelUserResponse {
  uint32 code = 1;
  string codeMsg = 2;
}

message ModifyUserInfoRequest {
  string userID = 1;
  UserInfo userInfo = 2;
}

message ModifyUserInfoResponse {
  uint32 code = 1;
  string codeMsg = 2;
}

message GetUserIdByPhoneNumberRequest {
  string phoneNumber = 1;
}

message GetUserIdByPhoneNumberResponse {
  uint32 code = 1;
  string codeMsg = 2;
  string userID = 3;
}

message GetUsersByNameRequest {
  string name = 1;
}

message GetUsersByNameResponse {
  uint32 code = 1;
  string codeMsg = 2;
  repeated string userIDList = 3;
}

